--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -55,6 +55,7 @@
     "@adonisjs/core": "^5.8.6",
     "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/repl": "^3.1.11",
+    "@sendgrid/mail": "^7.7.0",
     "luxon": "^3.0.1",
     "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
