--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -59,6 +59,7 @@
     "@sendgrid/mail": "^7.7.0",
     "luxon": "^3.0.1",
     "mysql": "^2.18.1",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
